# MaTaen

./: README.md
robot_arm/: CMakeLists.txt  package.xml
robot_arm/src/: IK.py  get_angle.py  get_position.py  motor_control.py  stacking_block.py  task1.py
손글씨 인식_CNN/: trained_weights.pkl
